<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirmar_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mbarrios.registrarcontactos.ConfirmarDatos">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        android:textStyle="bold"
        android:textSize="@dimen/tv_datos"
        android:textColor="@color/colorAccent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitulo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNombreConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Marlon Barrios Cuello"
            android:textSize="@dimen/tv_confimar"
            android:textStyle="italic"
            android:layout_marginTop="@dimen/tv_nombre_top"
            android:layout_marginLeft="@dimen/tv_left"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/tv_confir_top">


            <TextView
                android:id="@+id/tvFechaConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmar_fecha"
                android:textSize="@dimen/tv_confimar"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/tv_left"
                />

            <TextView
                android:id="@+id/tvFechaDato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tv_confimar"
                android:textStyle="italic"
                android:layout_marginLeft="@dimen/tv_left"
                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/tv_confir_top">


            <TextView
                android:id="@+id/tvTelefonoConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmar_telefono"
                android:textSize="@dimen/tv_confimar"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/tv_left"
                />

            <TextView
                android:id="@+id/tvTelefonoDato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tv_confimar"
                android:textStyle="italic"
                android:layout_marginLeft="@dimen/tv_left"
                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/tv_confir_top">


            <TextView
                android:id="@+id/tvEmailConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmar_email"
                android:textSize="@dimen/tv_confimar"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/tv_left"
                />

            <TextView
                android:id="@+id/tvEmailDato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tv_confimar"
                android:textStyle="italic"
                android:layout_marginLeft="@dimen/tv_left"
                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/tv_confir_top">


            <TextView
                android:id="@+id/tvDescripcionConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmar_descrip"
                android:textSize="@dimen/tv_confimar"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/tv_left"
                />

            <TextView
                android:id="@+id/tvDescripcionDato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tv_confimar"
                android:textStyle="italic"
                android:layout_marginLeft="@dimen/tv_left"
                />


        </LinearLayout>

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="@dimen/btn_editar"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top"
            android:theme="@style/SiguienteBoton"
            android:text="@string/btn_editar"
            android:textSize="@dimen/txt_btn_next"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>
